--- a/WebSocketService/web/Index.html
+++ b/WebSocketService/web/Index.html
@@ -20,7 +20,7 @@
                 
             </div>
             <div class="send">
-                <input type="text" placeholder="输入要发送的内容" style="width:85%;height:45px" id="text"/ value="test">
+                <input type="text" placeholder="输入要发送的内容" style="width:85%;height:45px" id="text" value="test" />
                 <input type="button" value="发送" style="height:45px;width:6.5%" id="send"/>
             </div>
 
