--- a/Web/Index.html
+++ b/Web/Index.html
@@ -6,11 +6,8 @@
     <title></title>
 </head>
 <body>
-    11yy
-    bbb222
-    yuikai
-    sasaf
-    侯钧瀚是炒鸡大好人，
-    海二狗是超级大二狗。呵呵哒
+    <div>
+        <p>这次是减少内容</p>
+    </div>
 </body>
 </html>
